# test-it-solutions

./: .gitignore  README.md  pyproject.toml  template.env
.github/workflows/: django.yml
money_transfer/: manage.py
money_transfer/catalog/: admin.py  apps.py  models.py  tests.py
money_transfer/catalog/fixtures/: records.json
money_transfer/catalog/migrations/: 0001_initial.py
money_transfer/core/: apps.py  models.py  utils.py  validators.py
money_transfer/homepage/: apps.py  tests.py  urls.py  views.py
money_transfer/homepage/templates/homepage/: index.html
money_transfer/locale/en/LC_MESSAGES/: django.po
money_transfer/locale/ru/LC_MESSAGES/: django.po
money_transfer/money_transfer/: asgi.py  settings.py  urls.py  wsgi.py
money_transfer/static_dev/css/: dtp-custom.css
money_transfer/static_dev/js/: language.js
money_transfer/templates/: base.html
money_transfer/templates/includes/: change_language.html  footer.html  form.html  header.html  messages.html
requirements/: dev.txt  prod.txt  test.txt
