[project]
name = "money-transfer"
version = "0.1.0"
description = "Money Transfer - control your money flow"
requires-python = ">=3.11, <3.12"

[tool.flake8]
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    ".git",
    "migrations",
    "build",
    "dist"
]
max-line-length = 79
inline-quotes = "single"
import-order-style = "google"
application-import-names = [
    "catalog",
    "core",
    "homepage",
    "money_transfer"
]
forbidden-functions = """
    *: datetime.datetime.now, we use django utils
    *: sys.path.append, usage of sys.path is banned
    *: globals, usage of globals is banned
    *: locals, usage of locals is banned
"""

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true
